# CuraLE

./: .gitignore  .gitignore.orig  CITATION.cff  CMakeLists.txt  CMakeLists.txt.orig  CONTRIBUTING.md  CPackConfig.cmake  CuraLE.spec.jinja  Dockerfile  README.md  README.md.orig  SECURITY.md  conandata.yml  conanfile.py  cura-lulzbot.desktop.in  cura-lulzbot.desktop.in.orig  cura.appdata.xml  cura.desktop.in  cura2.desktop.in  cura_app.py  cura_app.py.orig  cura_patchnotes.txt  installer.nsi  requirements.txt  run_coverage.py  run_cura-lulzbot.sh  run_cura2.sh  version.json
.github/: ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: SlicingCrash.yaml  config.yml
.github/workflows/: check-validate-materials.yml  conan-package-create.yml  conan-package-resources.yml  conan-package.yml  conan-recipe-export.yml  conan-recipe-version.yml  find-packages.yml  installers.yml  linux.yml  macos.yml  nightly-stable.yml  nightly-testing.yml  nightly.yml  nightly_release_notes.md.jinja  no-response.yml  printer-linter-format.yml  printer-linter-pr-diagnose.yml  process-pull-request.yml  release-process_feature-freeze.yml  release-process_release-candidate.yml  release_notes.md.jinja  security_badge.yml  stale.yml  unit-test-post.yml  unit-test.yml  update-fork.yml  update-translation.yml  windows.yml
.gitlab/issue_templates/: Default.md  default_template.md
cura/: ApplicationMetadata.py  Arrange.py  BuildVolume.py  BuildVolume.py.orig  ConvexHullDecorator.py  ConvexHullNode.py  CrashHandler.py  CuraActions.py  CuraActions.py.orig  CuraApplication.py  CuraApplication.py.orig  CuraPackageManager.py  CuraSplashScreen.py  FilamentChangeManager.py  LulzBotPrintersModel.py  LulzBotToolheadsModel.py  MachineAction.py  MachineActionManager.py  PickingPass.py  PickingPass.py.orig  PlatformPhysics.py  PrintInformation.py  PrintStatisticsDecorator.py  PrintStatisticsDecorator.py.orig  PrinterOutputDevice.py  PrinterOutputDevice.py.orig  QualityManager.py  QualityManager.py.orig  SliceableObjectDecorator.py  ThumbnailGenerator.py
cura/API/: Account.py  Backups.py  ConnectionStatus.py  __init__.py
cura/Arranging/: Arrange.py  Arrange.py.orig  Nest2DArrange.py
cura/Machines/: MachineNode.py  MaterialNode.py  QualityNode.py  VariantNode.py
cura/PrinterOutput/: FirmwareUpdater.py  NetworkedPrinterOutputDevice.py  PrinterOutputDevice.py
cura/Scene/: ConvexHullDecorator.py  ConvexHullDecorator.py.orig  ConvexHullNode.py  ConvexHullNode.py.orig  CuraSceneNode.py  CuraSceneNode.py.orig
cura/Settings/: ContainerManager.py  ContainerManager.py.orig  CuraContainerRegistry.py  CuraContainerRegistry.py.orig  CuraStackBuilder.py  ExtruderManager.py  ExtruderManager.py.orig  GlobalStack.py  MachineManager.py  MachineManager.py.orig  MachineNameValidator.py  MaterialSettingsVisibilityHandler.py  MaterialSettingsVisibilityHandler.py.orig  MaterialsModel.py  MaterialsModel.py.orig  ProfilesModel.py  ProfilesModel.py.orig  QualityAndUserProfilesModel.py  UserProfilesModel.py  __init__.py
cura/UI/: AddPrinterPagesModel.py  CuraSplashScreen.py  ObjectsModel.py  PrintInformation.py  TextManager.py  WelcomePagesModel.py  WhatsNewPagesModel.py
cura/UltimakerCloud/: CloudMaterialSync.py  UltimakerCloudConstants.py  UltimakerCloudScope.py
docs/scene/: tools.md
icons/: cura.icns  cura_2.xcf
licenses_thirdparty/: qt.md
packaging/AppImage/: AppRun  create_appimage.py  curale.appdata.xml  curale.desktop.jinja
packaging/AppImage-builder/: AppImageBuilder.yml.jinja  create_appimage.py
packaging/MacOS/: build_macos.py
packaging/NSIS/: CuraLE.nsi.jinja  Ultimaker-Cura.nsi.jinja  create_windows_installer.py
packaging/msi/: CuraLE.wxs.jinja  ExcludeComponents.xslt  create_windows_msi.py
plugins/3MFReader/: ThreeMFReader.py  ThreeMFReader.py.orig  ThreeMFWorkspaceReader.py  WorkspaceDialog.py
plugins/3MFWriter/: ThreeMFWriter.py
plugins/ChangeLogPlugin/: ChangeLog.py  ChangeLog.txt
plugins/CuraDrive/: __init__.py
plugins/CuraEngineBackend/: CuraEngineBackend.py  CuraEngineBackend.py.orig  ProcessSlicedLayersJob.py  ProcessSlicedLayersJob.py.orig  StartSliceJob.py  StartSliceJob.py.orig  plugin.json
plugins/CuraProfileReader/: __init__.py
plugins/CuraProfileWriter/: __init__.py
plugins/CustomSupportCylinder/: CustomSupportsCylinder.py  __init__.py
plugins/CustomSupports/: CustomSupports.py
plugins/DigitalLibrary/: __init__.py
plugins/FilamentChangeTool/: FilamentChangePanel.qml  FilamentChangePanelContents.qml  FilamentChangeTool.py  __init__.py  plugin.json
plugins/FirmwareUpdateChecker/: FirmwareUpdateChecker.py  FirmwareUpdateCheckerJob.py
plugins/FirmwareUpdater/: FirmwareUpdaterMachineAction.py  FirmwareUpdaterMachineAction.qml  __init__.py  plugin.json
plugins/GCodeReader/: FlavorParser.py  FlavorParser.py.orig  GCodeReader.py  GCodeReader.py.orig
plugins/GCodeWriter/: GCodeWriter.py  GCodeWriter.py.orig
plugins/ImperialPlugin/: ImperialPlugin.py  __init__.py  plugin.json
plugins/Import/: Import.py  __init__.py
plugins/LayerView/: LayerPass.py  LayerSlider.qml  LayerView.py  LayerView.qml  layerview_composite.shader
plugins/LegacyProfileReader/: __init__.py
plugins/LulzBotFirmwareUpdater/: LulzBotFirmwareUpdaterMachineAction.py  LulzBotFirmwareUpdaterMachineAction.qml  __init__.py  current.txt  (+1 more)
printer-linter/: README.md
resources/: README_resources.txt  conanfile.py
scripts/: check_material_profiles.py  fdmmaterial.xsd
tests/: TestArrange.py  TestArrange.py.orig  TestBuildVolume.py  TestPrintInformation.py.rework
(+41704 files in other folders)
